# chess-puzzle

./: .env  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json  puzzles.txt  readme.md  reamde.md
checkmate-validator/: Cargo.toml  Makefile  lib.rs  readme.md
checkmate-validator/deployer/: deploy-contract.js  package-lock.json
checkmate-validator/src/: chess.rs  lib.rs
cli/: readme.md
cli/src/: main.rs
contracts/: ChessPuzzle.sol  ICheckmateValidator.sol
contracts/checkmate-validator/: Cargo.toml  lib.rs  lib.wasm  lib.wat
deploy/: 00_deploy_contracts.ts
erc20/: package-lock.json  package.json
erc20/contracts/: CheckmateValidatorStub.sol  IChess.sol
erc20/scripts/: deploy.ts
erc20/test/: ChessPuzzle.ts
fluent-contract/: .gitignore  Cargo.toml  Makefile
fluent-contract/deployer/: deploy-call-contract.js  deploy-contract.js
fluent-contract/src/: chess.rs
fluent-contract/tmp/: chess_old.rs
front/: Dockerfile  package.json  server.js
front/public/: index.html
front/src/: App.js  Chessboard.js  ChessboardPage.js  ProviderContext.js  PuzzlesPage.css  PuzzlesPage.js  consts.js  index.js  web3.js
front/src/abi/: ChessPuzzle.abi.json
puzzle/: .gitignore  hardhat.config.ts  package-lock.json  package.json
puzzle/contracts/: ChessPuzzle.sol
puzzle/scripts/: 00_play_game.ts
puzzle/test/: FluentEloToken.ts
puzzles/: generate-puzzles.js  package-lock.json  package.json
scripts/: 00_create_puzzle.ts  00_play_game.ts  00_setup_game.ts  01_create_puzzles.ts  02_fund_player.ts  03_check_token_balance.ts
tasks/: create_puzzles.ts  fund_player.ts  unsolved_puzzles.ts  utils.ts
test/: ChessPuzzle.ts
web3/: Dockerfile  docker-compose.yaml  package-lock.json
web3/src/: App.js  Chessboard.js  ChessboardPage.js  PuzzlesPage.css  PuzzlesPage.js  chessPuzzleContract.js  index.js
web3/src/abi/: ChessPuzzle.abi.json
web3/src/assets/: App.css
