[package]
edition = "2021"
name = "checkmate-validator"
version = "0.1.0"

[dependencies]
alloy-sol-types = {version = "0.7.4", default-features = false}

fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", default-features = false}
shakmaty = {git = "https://github.com/niklasf/shakmaty", default-features = false, features = ["alloc"]}

[dev-dependencies]
hex = "0.4.3"
hex-literal = { version = "0.4.1", default-features = false }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"

# [profile.release]
# lto = true
# opt-level = 'z'
# panic = "abort"
# strip = true

[features]
default = ["std"]
std = [
  "fluentbase-sdk/std",
]
