[package]
edition = "2021"
name = "checkmate-validator"
version = "0.1.0"

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false }
shakmaty = { git = "https://github.com/niklasf/shakmaty", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4.3"
alloy-sol-types = { version = "0.8.5", default-features = false }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", features = ["std"], default-features = false }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "fluentbase-sdk/std",
]
